[gd_scene load_steps=5 format=2]

[ext_resource path="res://Audio/Music/track_01.ogg" type="AudioStream" id=1]
[ext_resource path="res://Audio/Music/track_03.ogg" type="AudioStream" id=2]
[ext_resource path="res://Audio/Music/track_02.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/MusicPlayer.gd" type="Script" id=4]

[node name="MusicPlayer" type="Node"]
script = ExtResource( 4 )

[node name="Track1Player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = -9.343
bus = "Music"

[node name="Track2Player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -9.343
bus = "Music"

[node name="Track3Player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -9.343
bus = "Music"
